# bleikoya-2023

./: .editorconfig  .env.example  .gitignore  404.php  AGENTS.md  ERROR_LOGGING_SETUP.md  HISTORISKE_FLYBILDER.md  MAP_DESIGN.md  MIGRATIONS.md  TODO.md  archive-tribe_events.php  archive.php  author.php  category.php  comments.php  composer.json  footer.php  front-page.php  functions.php  header.php  index.php  package-lock.json  package.json  page-agent.php  page-bilder.php  page-galleri.php  page-info.php  page-kart.php  page-stilguide.php  page.php  phpunit.xml  search.php  searchform.php  single-meeting_poll.php  single-tribe_events.php  single.php  style.css  taxonomy-gallery.php  test-logging-simple.php  test-logging-web.php  (+3 more)
.ai/: context.md
.claude/: settings.local.json
acf-json/: group_64173924e608c.json  group_65c7e6e12dc25.json  group_66b36c80e146d.json  group_gallery_hidden.json
admin/: export-dugnad-google.php  export-user-data-google.php  export-user-data.php  export-user-email-adresses.php  import-google-doc.php
agent/: .dockerignore  .env.example  Dockerfile  fly.toml  pyproject.toml
agent/agent/: auth.py  prompts.py  server.py  tools.py
agent/static/: chat.css  chat.js  index.html
assets/: site.webmanifest
documents/: arkiv-veiledning.md  migrate_archive.py  migrering-status.md  read_sheet.py
includes/: events.php  filters.php  search.php  templating.php  theme-setup.php  utilities.php
migrations/: migrate-to-new-connections.php  populate-gallery-sorted-images.php
scripts/: .htaccess  backup.sh  fix-marker-colors.php  index.php  (+3 more)
(+99 files in other folders)
